[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/prstart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/[labels] basis33(1).ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Cauldron/MixPopup.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_color = Color( 0.368627, 0.215686, 0.168627, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="MixPopup" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = -7.0
margin_right = 2058.0
margin_bottom = 1056.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_left = 263.0
margin_top = 93.0
margin_right = 756.0
margin_bottom = 203.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Vaccine Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescLabel" type="Label" parent="."]
margin_left = 263.0
margin_top = 247.0
margin_right = 963.0
margin_bottom = 411.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Vaccine Description:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VaccineName" type="TextEdit" parent="."]
margin_left = 994.0
margin_top = 90.0
margin_right = 1927.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.368627, 0.215686, 0.168627, 1 )
custom_colors/background_color = Color( 0.937255, 0.831373, 0.65098, 1 )
custom_fonts/font = SubResource( 2 )
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VaccineDesc" type="TextEdit" parent="."]
margin_left = 998.0
margin_top = 266.0
margin_right = 1933.0
margin_bottom = 783.0
custom_colors/font_color = Color( 0.368627, 0.215686, 0.168627, 1 )
custom_colors/background_color = Color( 0.937255, 0.831373, 0.65098, 1 )
custom_fonts/font = SubResource( 3 )
syntax_highlighting = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="TextureButton" parent="."]
margin_left = 845.0
margin_top = 846.0
margin_right = 1251.0
margin_bottom = 998.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
